<resources>
    <string name="app_name">SMEnglish</string>
    <string name="facebook_app_id">755615434587998</string>

    <string name="news">NEWS</string>
    <string name="contact">CONTACT</string>
    <string name="communications">COMMUNICATIONS</string>
    <string name="login_to_access_the_app">Welcome,\nPlease log in</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="no_comms">No communications found</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_number_value">0380 436 0870</string>
    <string name="address">Address:</string>
    <string name="sm_address">351 268 3382</string>
    <string name="e_mail">E-Mail:</string>
    <string name="email_value">351 268 3382</string>
    <string name="facebook">Facebook Page</string>
    <string name="facebook_page_value">351 268 3382</string>
    <string name="login_with_facebook_to_enable_the_news_section">Login with Facebook to\nenable the News section</string>
    <string name="go_back_to_login_page">Go Back to Login Page</string>
    <string name="shared_by_s_m"><![CDATA[Shared by S&M]]></string>
</resources>
