<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_news"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_communications"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/communications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contact"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/contact"
        app:showAsAction="ifRoom" />
</menu>